--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<img border="0" height="200" width="190" src="img/简历-展阳阳.png">
+<img border="0" height="200" width="190" src="img/Resume.png">
 </body>
 </html>
