--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<img border="0" height="200" width="190" src="img/Resume.png">
+<img alt="简历" height="200" width="1900" src="img/Resume.png">
 </body>
 </html>
