--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
+  <style type="text/css" >
+    img{
+    width:400px,
+    height:auto
+    }
+    </style>
 <body>
-<img alt="简历" height="2000" width="1900" src="img/Resume.png">
+<img alt="简历"  src="img/Resume.png">
 </body>
 </html>
