--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <style type="text/css" >
     img{
-    width:320px,
-    height:auto
+    width:100%;
+    height:auto;
     }
     </style>
 <body>
